// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoutePicker renders a list of routes and presets toggle 1`] = `
<div
  className="m-route-picker"
>
  <div
    className="m-route-filter"
  >
    <div
      className="m-route-filter__text"
    >
      <input
        className="m-route-filter__input"
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Search routes"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="m-garage-filter"
  >
    <button
      className="m-garage-filter__show-hide-button"
      onClick={[Function]}
      title="Toggle Garage Filter"
    >
      <div
        className="m-garage-filter__header"
      >
        Filter garages
      </div>
      <div
        className="m-garage-filter__show-hide-icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
    </button>
  </div>
  <div
    className="m-route-picker__routes-container"
  >
    <ul
      className="m-route-picker__route-list"
    >
      <li>
        <button
          className="m-route-picker__route-list-button"
          onClick={[Function]}
        >
          71
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button"
          onClick={[Function]}
        >
          73
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button"
          onClick={[Function]}
        >
          111
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button"
          onClick={[Function]}
        >
          SL1
        </button>
      </li>
    </ul>
    <ul
      className="m-route-picker__selected-routes"
    >
      <li>
        <button
          className="m-route-picker__selected-routes-button"
          onClick={[Function]}
        >
          28
          <span
            className="m-route-picker__selected-routes-button-icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__selected-routes-button"
          onClick={[Function]}
        >
          39
          <span
            className="m-route-picker__selected-routes-button-icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`RoutePicker renders a loading/empty state 1`] = `
<div
  className="m-route-picker"
>
  <div
    className="m-route-filter"
  >
    <div
      className="m-route-filter__text"
    >
      <input
        className="m-route-filter__input"
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Search routes"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="m-garage-filter"
  >
    <button
      className="m-garage-filter__show-hide-button"
      onClick={[Function]}
      title="Toggle Garage Filter"
    >
      <div
        className="m-garage-filter__header"
      >
        Filter garages
      </div>
      <div
        className="m-garage-filter__show-hide-icon"
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </div>
    </button>
  </div>
  <div
    className="m-route-picker__routes-container"
  >
    loading...
    <p>
      Selected routes will show up here…
    </p>
  </div>
</div>
`;
